# CppLibrary-WireGuard

./: .gitignore  CMakeLists.txt  LEGAL_NOTICES.md  LICENSE  NOTICE  README.md
docs/: README.md
docs/cpp/: README.md  cookie挑战.md
docs/harmonyos/: README.md  plan.md
platform-harmonyos/: .gitignore  build-profile.json5
platform-harmonyos/AppScope/: app.json5
platform-harmonyos/AppScope/resources/base/element/: color.json  string.json
platform-harmonyos/AppScope/resources/base/media/: layered_icon.json  layered_image.json
platform-harmonyos/entry/: oh-package-lock.json5  oh-package.json5
platform-harmonyos/entry/src/main/: module.json5
platform-harmonyos/entry/src/main/ets/entryability/: EntryAbility.ets
platform-harmonyos/entry/src/main/ets/entrybackupability/: EntryBackupAbility.ets
platform-harmonyos/entry/src/main/ets/pages/: Index.ets
platform-harmonyos/entry/src/main/ets/stage/: MyWGAbilityStage.ets
platform-harmonyos/entry/src/main/resources/base/element/: string.json
platform-harmonyos/entry/src/main/resources/base/profile/: start_window.json
platform-harmonyos/wg_tunnel/: Index.ets  build-profile.json5  oh-package-lock.json5  oh-package.json5
platform-harmonyos/wg_tunnel/src/main/: module.json5
platform-harmonyos/wg_tunnel/src/main/cpp/: CMakeLists.txt  WireGuardDevice.cpp  WireGuardDevice.h  napi_init.cpp  napi_tools.cpp  napi_tools.h
platform-harmonyos/wg_tunnel/src/main/cpp/logs/: CMakeLists.txt  logs.cpp  logs.h
platform-harmonyos/wg_tunnel/src/main/cpp/types/libwg_tunnel/: Index.d.ts  entity.ts  oh-package.json5
platform-harmonyos/wg_tunnel/src/main/ets/ability/: WGVpnExtAbility.ets
platform-harmonyos/wg_tunnel/src/main/ets/error/: WGAppException.ts
platform-harmonyos/wg_tunnel/src/main/ets/model/: WGConfigHelper.ets  WGHelper.ets
platform-harmonyos/wg_tunnel/src/main/ets/model/db/: WGDao.ets  wgdb.ets
platform-harmonyos/wg_tunnel/src/main/ets/model/db/table/: WgConfigTable.ets
platform-harmonyos/wg_tunnel/src/main/ets/model/entity/: ClientEditConfig.ets  ConnectState.ets  PeerEditConfig.ets  WGClientConfig.ets  WGConfigEntity.ets  napi_entity.ts
platform-harmonyos/wg_tunnel/src/main/ets/tools/: LLog.ts  http.ets  tools.ets
platform-harmonyos/wg_tunnel/src/main/ets/view/: WGConfigPreView.ets  WGMainView.ets  WGNewConfigView.ets
platform-harmonyos/wg_tunnel/src/main/ets/view_model/: WGConfigPreViewModel.ets  WGMainViewModel.ets  WGNewConfigViewModel.ets
platform-harmonyos/wg_tunnel/src/main/resources/base/element/: color.json  string.json
platform-harmonyos/wg_tunnel/src/main/resources/base/profile/: router_map.json
platform-harmonyos/wg_tunnel/src/main/resources/dark/element/: color.json
platform-harmonyos/wg_tunnel/src/ohosTest/: module.json5
platform-harmonyos/wg_ui/: Index.ets  oh-package-lock.json5  oh-package.json5
platform-harmonyos/wg_ui/src/main/: module.json5
platform-harmonyos/wg_ui/src/main/ets/entity/: WGConfigPreViewParams.ets  WGEditConfigParams.ets
platform-harmonyos/wg_ui/src/main/ets/model/: WireGuardNav.ets
platform-harmonyos/wg_ui/src/main/ets/view/: QRCodeNewWGConfDialog.ets  WGConfigPreView.ets  WGEditConfigView.ets  WGMainView.ets  WGNewConfigView.ets  WGSettingView.ets
platform-harmonyos/wg_ui/src/main/ets/view/component/: DiyTextInput.ets
platform-harmonyos/wg_ui/src/main/ets/view_model/: WGConfigPreViewModel.ets  WGEditConfigViewModel.ets  WGMainViewModel.ets  WGNewConfigViewModel.ets  WGOfMeViewModel.ets
platform-harmonyos/wg_ui/src/main/resources/base/element/: color.json  string.json
platform-harmonyos/wg_ui/src/main/resources/base/profile/: router_map.json
platform-harmonyos/wg_ui/src/ohosTest/: module.json5
src/: CMakeLists.txt  main.cpp
src/clib/: CMakeLists.txt
src/clib/blake2s/: CMakeLists.txt
src/clib/sodium/: CMakeLists.txt
src/clib/sodium/sodium/: version.c
src/libsodium/: CMakeLists.txt
src/libsodium/include/: sodium.h
src/logs/: CMakeLists.txt  logs.cpp  logs.h
src/tools/: CMakeLists.txt
src/wg/: CMakeLists.txt  WGException.cpp  WGException.h  allowedips.cpp  allowedips.h  cookie.cpp  cookie.h  crypto.cpp  crypto.h  device.cpp  device.h  encoding.cpp  encoding.hpp  entity.cpp  entity.h  keypair.cpp  keypair.h  messages.h  peer.cpp  peer.h  pipwait.cpp  pipwait.h  queueing.cpp  queueing.h  ratelimiter.cpp  ratelimiter.h  timers.cpp  timers.h  tools.cpp  tools.h  udp_socket.cpp  udp_socket.h  version.h
src/wg/crypto/: crypto.cpp  crypto.h  encoding.cpp  encoding.hpp  nonce.cpp  nonce.h  nonce2.cpp  nonce2.h
src/wg/tools/: conf_file.cpp  conf_file.h  pipwait.cpp  wg_dns.cpp  wg_dns.h
tests/: CMakeLists.txt  key_pair_gen.cpp  test_cookie.cpp  test_dns.cpp  test_main.cpp  test_noise.cpp  test_noise_handshake.cpp  test_params.h  test_tools.cpp
tests/resources/: wg0.conf
